--- a/css/responsive.css
+++ b/css/responsive.css
@@ -119,7 +119,7 @@
   #call-to-action::after,
   #call-to-action::before {
     --call-to-action-height: 100vh;
-    height: var(--call-to-action-height);
+    min-height: var(--call-to-action-height);
   }
 
   #call-to-action .container p:nth-child(1) {
@@ -153,7 +153,7 @@
   #call-to-action,
   #call-to-action::after,
   #call-to-action::before {
-    --call-to-action-height: 400px;
+    --call-to-action-height: 450px;
     min-height: var(--call-to-action-height);
     padding-bottom: 3rem;
   }
@@ -242,5 +242,80 @@
 
   #hero p {
     font-size: 0.9rem;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#statements
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #statements {
+    padding: 4rem 0;
+  }
+
+  #statements i {
+    font-size: 1.5rem;
+    margin: 1rem auto;
+  }
+
+  #statements h3 {
+    font-size: 1.5rem;
+  }
+
+  #statements h1 {
+    font-size: 30px;
+  }
+
+  #statements p {
+    font-size: 0.9rem;
+    padding: 0 15rem;
+  }
+
+  #statements .btn {
+    padding: 0.5rem 1.2rem;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #statements {
+    padding: 3rem 0;
+  }
+
+  #statements p {
+    padding: 0 10rem;
+  }
+}
+
+@media (max-width: 992px) {
+  #statements p {
+    padding: 0 5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #statements p {
+    padding: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  #statements i {
+    font-size: 1rem;
+  }
+
+  #statements h3 {
+    font-size: 1rem;
+  }
+
+  #statements h1 {
+    font-size: 1.5rem;
+  }
+
+  #statements p {
+    font-size: 0.85rem;
   }
 }
