--- a/css/style.css
+++ b/css/style.css
@@ -908,7 +908,7 @@ aside nav li.active a {
 }
 
 #get-in-touch .policy {
-  padding: 3em 20rem 5rem 20rem;
+  padding: 3em 20rem 5rem;
 }
 
 #get-in-touch .policy p:nth-child(1) {
