--- a/css/style.css
+++ b/css/style.css
@@ -930,7 +930,7 @@ aside nav li.active a {
 
 /* 
  =========================================================================================================================
-  Section#get-in-touch
+  footer
  =========================================================================================================================
 */
 
