--- a/css/responsive.css
+++ b/css/responsive.css
@@ -729,3 +729,65 @@
     padding: 10px;
   }
 }
+
+/* 
+ =========================================================================================================================
+  Section#staff-statements
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #staff-statements .container {
+    padding: 0 5rem;
+  }
+
+  #staff-statements .content div:nth-child(1) p {
+    font-size: 0.9rem;
+  }
+
+  #staff-statements .content div:nth-child(1) h2 {
+    font-size: 1.8rem;
+  }
+
+  #staff-statements .content div:nth-child(2) p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #staff-statements .container {
+    padding: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  #staff-statements .images {
+    gap: 2rem;
+  }
+
+  #staff-statements .content {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #staff-statements .images {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #staff-statements {
+    padding: 3rem 0;
+  }
+
+  #staff-statements .container {
+    padding: 10px;
+  }
+
+  #staff-statements .images {
+    gap: 1rem;
+  }
+}
