Our Staff Responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -791,3 +791,83 @@
     gap: 1rem;
   }
 }
+
+/* 
+ =========================================================================================================================
+  Section#our-staff
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #our-staff .container > p:nth-child(1) {
+    font-size: 0.9rem;
+    margin-bottom: 0.6rem;
+  }
+
+  #our-staff .container > h2 {
+    font-size: 32px;
+    margin-bottom: 0;
+  }
+
+  #our-staff .container > p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #our-staff .container {
+    padding: 0 5rem;
+  }
+}
+
+@media (max-width: 992px) {
+  #our-staff .container {
+    padding: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  #our-staff {
+    padding: 3rem 0;
+  }
+
+  #our-staff .staffs.management,
+  #our-staff .staffs.educator,
+  #our-staff .staffs.other {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #our-staff .container {
+    padding: 10px;
+  }
+
+  #our-staff .container > h2 {
+    font-size: 24px;
+  }
+
+  #our-staff .container > p {
+    font-size: 0.9rem;
+  }
+
+  #our-staff .staffs.management,
+  #our-staff .staffs.educator,
+  #our-staff .staffs.other {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+
+  #our-staff .staffs {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (max-width: 336px) {
+  #our-staff .staffs.management,
+  #our-staff .staffs.educator,
+  #our-staff .staffs.other {
+    grid-template-columns: 1fr;
+  }
+}
