Contact Page Responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -871,3 +871,143 @@
     grid-template-columns: 1fr;
   }
 }
+
+/* 
+ =========================================================================================================================
+  Section#contact-hero
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #contact-hero p {
+    font-size: 0.9rem;
+  }
+
+  #contact-hero h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #contact-hero {
+    min-height: 250x;
+  }
+}
+
+@media (max-width: 576px) {
+  #contact-hero {
+    padding: 10px;
+  }
+
+  #contact-hero p,
+  #contact-hero h1 {
+    text-align: center;
+  }
+
+  #contact-hero h1 {
+    font-size: 2rem;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#contact-area
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #contact-area .container {
+    padding: 0 6rem;
+  }
+
+  #contact-area .container .boxes {
+    gap: 2rem;
+  }
+
+  #contact-area .boxes > div h2 {
+    font-size: 1rem;
+  }
+
+  #contact-area .boxes > div p {
+    font-size: 0.9rem;
+  }
+
+  #contact-area .form {
+    margin: 2rem 0 3rem;
+    padding: 40px 100px;
+  }
+
+  #contact-area .form h1 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 1200px) {
+  #contact-area .container {
+    padding: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  #contact-area .form {
+    padding: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  #contact-area {
+    padding-bottom: 1rem;
+  }
+
+  #contact-area .container .boxes {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  #contact-area .boxes > div {
+    padding: 1rem;
+  }
+
+  #contact-area .form {
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  #contact-area .form p {
+    font-size: 0.9rem;
+  }
+
+  #contact-area .form h1 {
+    font-size: 1.5rem;
+  }
+
+  #contact-area .form form {
+    margin-top: 1rem;
+  }
+
+  #contact-area .form form > div {
+    grid-template-columns: 1fr;
+  }
+
+  #contact-area .form form .btn {
+    padding: 0.5rem 1.2rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #contact-area .container {
+    padding: 10px;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#map
+ =========================================================================================================================
+*/
+
+@media (max-width: 576px) {
+  #map .container {
+    padding: 10px;
+  }
+}
