About Sponsor Responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1578,7 +1578,7 @@ footer a {
 
 /* 
  =========================================================================================================================
-  Section#about-vision
+  Section#about-curriculum
  =========================================================================================================================
 */
 
