--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1381,3 +1381,96 @@
     padding: 0 10px;
   }
 }
+
+/* 
+ =========================================================================================================================
+  Section#about-sponsors
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #about-sponsors > i {
+    font-size: 1.5rem;
+  }
+
+  #about-sponsors > p:nth-child(2) {
+    font-size: 1rem;
+  }
+
+  #about-sponsors > h2 {
+    font-size: 32px;
+  }
+
+  #about-sponsors .all-sponsors article:nth-child(1) p {
+    font-size: 0.9rem;
+  }
+
+  #about-sponsors .all-sponsors article:nth-child(1) h2 {
+    font-size: 32px;
+  }
+
+  #about-sponsors .all-sponsors article .btn {
+    padding: 0.5rem 1.3rem;
+  }
+
+  #about-sponsors .all-sponsors article:nth-child(2) p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #about-sponsors .container {
+    padding: 3rem 2rem 0;
+  }
+}
+
+@media (max-width: 992px) {
+  #about-sponsors .container {
+    padding: 3rem 0 0;
+  }
+
+  #about-sponsors .all-sponsors {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
+  #about-sponsors .all-sponsors article:nth-child(1) {
+    order: 2;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  #about-sponsors {
+    padding: 1rem 0 3rem;
+  }
+
+  #about-sponsors > h2 {
+    font-size: 24px;
+  }
+
+  #about-sponsors .container {
+    padding: 2rem 0 0;
+    gap: 1rem;
+  }
+
+  #about-sponsors .all-sponsors article:nth-child(1) h2 {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 576px) {
+  #about-sponsors {
+    padding: 1rem 10px 3rem;
+  }
+
+  #about-sponsors .container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+
+  #about-sponsors .all-sponsors {
+    grid-template-columns: 1fr;
+  }
+}
