--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1609,3 +1609,82 @@
     text-align: center;
   }
 }
+
+/* 
+ =========================================================================================================================
+  Section#admission-details
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #admission-details article {
+    padding: 3rem;
+  }
+
+  #admission-details article:nth-child(1) > p:nth-child(1) {
+    font-size: 0.9rem;
+  }
+
+  #admission-details article:nth-child(1) > h2 {
+    font-size: 32px;
+  }
+
+  #admission-details article:nth-child(1) > p:nth-child(3) {
+    font-size: 0.9rem;
+  }
+
+  #admission-details article:nth-child(1) > .box i {
+    font-size: 20px;
+  }
+
+  #admission-details article:nth-child(2) h1 {
+    font-size: 32px;
+  }
+
+  #admission-details article:nth-child(2) p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #admission-details {
+    grid-template-columns: 1fr;
+  }
+
+  #admission-details article:nth-child(1) {
+    padding-bottom: 0;
+  }
+
+  #admission-details article:nth-child(2) {
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  #admission-details article:nth-child(1) > p:nth-child(1) {
+    text-align: center;
+  }
+
+  #admission-details article:nth-child(1) > h2 {
+    text-align: center;
+  }
+
+  #admission-details article:nth-child(1) > p:nth-child(3) {
+    text-align: center;
+  }
+}
+
+@media (max-width: 576px) {
+  #admission-details article {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  #admission-details article:nth-child(1) > h2 {
+    font-size: 24px;
+  }
+
+  #admission-details article:nth-child(2) h1 {
+    font-size: 24px;
+  }
+}
